[project]
name = "django-jobs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
main = []
dev = [
    "celery-types>=0.26.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# Указываем ruff, что корни исходников в src
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["presentation", "infrastructure"]
